# flutter-shy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.jsx  App.tsx  ConfigureAuthentication.tsx  ConfigurePaths.tsx  ConfigureServers.tsx  OpenApiContent.tsx  SchemaVIewer.tsx  SelectFile.jsx  SelectFile.tsx  backend.js  styles.ts  types.ts  util.js  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  error.rs  main.rs  misc.rs  model.rs  parser.rs
