[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0.81"
backtrace = "0.3.65"
serde = { version = "1.0.137", features = [ "derive" ] }
tauri = { version = "1.0.6", features = ["api-all"] }
id3 = "1.2.0"
mp4ameta = "0.11.0"
base64 = "0.13.0"
lazy_static = "1.4.0"
apple-bloom = { git = "https://github.com/hbina/apple-bloom", version = "0.1.6" }
nom = "7.1.1"
serde_yaml = "0.8.24"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
