[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0.81"
backtrace = "0.3.65"
serde = { version = "1.0.137", features = [ "derive" ] }
tauri = { version = "1.4", features = [ "shell-open"] }
id3 = "1.2.0"
mp4ameta = "0.11.0"
base64 = "0.13.0"
lazy_static = "1.4.0"
apple-bloom = "0.1.6"
nom = "7.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
